Stromgren radius is revised. Text is edited

--- a/biblio.bib
+++ b/biblio.bib
@@ -2,12 +2,111 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Yuka Fujii at 2015-09-05 17:18:00 +0900 
+%% Created for Yuka Fujii at 2015-09-07 17:58:20 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{schroder2007,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2007A%26A...465..593S},
+	Author = {{Schr{\"o}der}, K.-P. and {Cuntz}, M.},
+	Date-Added = {2015-09-07 08:51:39 +0000},
+	Date-Modified = {2015-09-07 08:52:19 +0000},
+	Doi = {10.1051/0004-6361:20066633},
+	Eprint = {astro-ph/0702172},
+	Journal = {\aap},
+	Keywords = {methods: statistical, stars: general, stars: late-type, stars: mass-loss, stars: winds, outflows},
+	Month = apr,
+	Pages = {593-601},
+	Title = {{A critical test of empirical mass loss formulas applied to individual giants and supergiants}},
+	Volume = 465,
+	Year = 2007,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361:20066633}}
+
+@article{schroder2005,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2005ApJ...630L..73S},
+	Author = {{Schr{\"o}der}, K.-P. and {Cuntz}, M.},
+	Date-Added = {2015-09-07 08:50:40 +0000},
+	Date-Modified = {2015-09-07 08:51:38 +0000},
+	Doi = {10.1086/491579},
+	Eprint = {astro-ph/0507598},
+	Journal = {\apjl},
+	Keywords = {Stars: Chromospheres, Stars: Late-Type, Stars: Mass Loss, Turbulence, Waves},
+	Month = sep,
+	Pages = {L73-L76},
+	Title = {{A New Version of Reimers' Law of Mass Loss Based on a Physical Approach}},
+	Volume = 630,
+	Year = 2005,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1086/491579}}
+
+@article{trifonov2015,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150804769T},
+	Archiveprefix = {arXiv},
+	Author = {{Trifonov}, T. and {Reffert}, S. and {Zechmeister}, M. and {Reiners}, A. and {Quirrenbach}, A.},
+	Date-Added = {2015-09-07 05:50:06 +0000},
+	Date-Modified = {2015-09-07 05:50:13 +0000},
+	Eprint = {1508.04769},
+	Journal = {ArXiv e-prints},
+	Keywords = {Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+	Month = aug,
+	Primaryclass = {astro-ph.EP},
+	Title = {{Precise radial velocities of giant stars VIII. Testing for the presence of planets with CRIRES Infrared Radial Velocities}},
+	Year = 2015}
+
+@article{lee2014,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2014JKAS...47...69L},
+	Archiveprefix = {arXiv},
+	Author = {{Lee}, B.-C. and {Han}, I. and {Park}, M.-G. and {Mkrtichian}, D.~E. and {Jeong}, G. and {Kim}, K.-M. and {Valyavin}, G.},
+	Date-Added = {2015-09-07 05:18:38 +0000},
+	Date-Modified = {2015-09-07 05:18:45 +0000},
+	Doi = {10.5303/JKAS.2014.47.2.69},
+	Eprint = {1405.2130},
+	Journal = {Journal of Korean Astronomical Society},
+	Keywords = {star: individual: {$\sigma$} Persei (HD 21552), techniques: radial velocities},
+	Month = apr,
+	Pages = {69-76},
+	Primaryclass = {astro-ph.SR},
+	Title = {{Planetary Companion in K Giant {$\sigma$} Persei}},
+	Volume = 47,
+	Year = 2014,
+	Bdsk-Url-1 = {http://dx.doi.org/10.5303/JKAS.2014.47.2.69}}
+
+@article{lee2013,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2013A%26A...549A...2L},
+	Archiveprefix = {arXiv},
+	Author = {{Lee}, B.-C. and {Han}, I. and {Park}, M.-G.},
+	Date-Added = {2015-09-07 05:15:36 +0000},
+	Date-Modified = {2015-09-07 05:15:47 +0000},
+	Doi = {10.1051/0004-6361/201220301},
+	Eid = {A2},
+	Eprint = {1211.2051},
+	Journal = {\aap},
+	Keywords = {planetary systems, stars: individual: HD 208527, techniques: radial velocities, stars: individual: HD 220074},
+	Month = jan,
+	Pages = {A2},
+	Primaryclass = {astro-ph.SR},
+	Title = {{Planetary companions orbiting M giants HD 208527 and HD 220074}},
+	Volume = 549,
+	Year = 2013,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361/201220301}}
+
+@book{dessler1983,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1983phjm.book.....D},
+	Author = {{Dessler}, A.~J.},
+	Booktitle = {Physics of the Jovian Magnetosphere},
+	Date-Added = {2015-09-07 04:46:53 +0000},
+	Date-Modified = {2015-09-07 04:47:01 +0000},
+	Keywords = {Jupiter Atmosphere, Planetary Magnetic Fields, Planetary Magnetospheres, Space Plasmas, Charged Particles, Energetic Particles, Extraterrestrial Radio Waves, Io, Jupiter Probes, Magnetic Flux, Magnetically Trapped Particles, Magnetospheric Electron Density, Magnetospheric Ion Density, Planetary Ionospheres, Planetary Radiation, Plasma Physics, Plasma Waves, Radio Emission, Spectrophotometry, Toroidal Plasmas, Voyager Project},
+	Title = {{Physics of the Jovian magnetosphere}},
+	Year = 1983}
 
 @article{dulk1994,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
